--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="left">visitmypage</div>
+                    <div class="left">Visit My Page</div>
                     <div class="right">
                         <a class="website" href="https://weball.io" target="_blank"><i
                                 class="fas fa-external-link-alt"></i></a>
